--- a/006.html
+++ b/006.html
@@ -85,7 +85,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
 <span id="pro">河南省</span>:南乐收费站--G45大广高速--豫冀界；<br><hr>
-<span id="pro">河北省</span>:冀豫界--G45大广高速--S3700津雄高速--雄县收费站--S042--雄县道口村布料批发市场<br><hr></div></li>
+<span id="pro">河北省</span>:冀豫界--G45大广高速--雄县收费站--G336--葛各庄村<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
