--- a/a002.html
+++ b/a002.html
@@ -70,7 +70,7 @@
                 <li>
                     <div class="detail-name detail-name-blod">通行路线：</div>
                     <div class="detail-value " id="roads">
-                        <br>荆州科美玻璃有限公司-群力大道-S223-沙市收费站-G50沪渝高速-仙桃收费站-S214-中国联合网络通讯有限公司汉江分公司。(审 批 路 线 不 含 城 市 道 路 )</div>
+                        <br>荆州科美玻璃有限公司-群力大道-S223-沙市收费站-G50沪渝高速-G55二广高速-宜城北收费站-G346-物丰驾校考培中心。(审 批 路 线 不 含 城 市 道 路 )</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">承运单位：</div>
