--- a/a003.html
+++ b/a003.html
@@ -53,15 +53,15 @@
                 <li data-role="list-divider" class="category-title">基本信息</li> <!-- 基本信息 -->
                 <li>
                     <div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">B4200002023080500069</div>
+                    <div class="detail-value " id="reqNo">B4200002024110600075</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">有效范围：</div>
-                    <div class="detail-value " id="passDists">湖北省我的</div>
+                    <div class="detail-value " id="passDists">湖北省</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行日期：</div>
-                    <div class="detail-value " id="passDate">2023-08-05至2023-08-31</div>
+                    <div class="detail-value " id="passDate">2024-11-06至2024-11-20</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行次数：</div>
@@ -70,7 +70,7 @@
                 <li>
                     <div class="detail-name detail-name-blod">通行路线：</div>
                     <div class="detail-value " id="roads">
-                        <br>荆门-荆州,鸿发物流-培公大道-荆门收费站-G55二广高速-章庄铺收费站-集贸南路-章庄铺小学。(审批路线不含城市道路)</div>
+                        <br>徐家湾-金龙大道-龙凤坝收费站-G6911安来高速-高罗收费站-G209-中国石化高罗加油站。(审批路线不含城市道路)</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">承运单位：</div>
@@ -85,25 +85,25 @@
                 <li data-role="list-divider" class="category-title">货物信息</li> <!-- 货物信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">钢结构（钢板）</div>
+                    <div class="detail-value " id="cargoInfo">挖机</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物重量：</div>
-                    <div class="detail-value " id="cargoWeight">43.00吨</div>
+                    <div class="detail-value " id="cargoWeight">52.00吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
-                    <div class="detail-value " id="cargoOutline">24.00 × 3.50 × 4.50</div>
+                    <div class="detail-value " id="cargoOutline">15.00 × 3.75 × 3.60</div>
                 </li>
 
                 <li data-role="list-divider" class="category-title">车辆信息</li> <!-- 车辆信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">牵引车车号牌：</div>
-                    <div class="detail-value" id="vehicleNo">冀E12345</div>
+                    <div class="detail-value" id="vehicleNo">冀EQ1451</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">牵引车厂牌型号：</div>
-                    <div class="detail-value" id="model">陕汽牌</div>
+                    <div class="detail-value" id="model">解放牌</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">牵引车整备质量：</div>
@@ -111,11 +111,11 @@
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车车号牌：</div>
-                    <div class="detail-value" id="hanvehicleNo">冀E12345挂</div>
+                    <div class="detail-value" id="hanvehicleNo">鲁H7KL3挂</div>
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车厂牌型号：</div>
-                    <div class="detail-value" id="hanmodel">鲁俊达牌</div>
+                    <div class="detail-value" id="hanmodel">利源达牌</div>
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车整备质量：</div>
@@ -125,15 +125,15 @@
                 <li data-role="list-divider" class="category-title">车货总体信息</li> <!-- 车货总体信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">车货总重量：</div>
-                    <div class="detail-value " id="totalWeight">60.00吨</div>
+                    <div class="detail-value " id="totalWeight">69.00吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
-                    <div class="detail-value " id="totalOutline">24.00 × 3.50 × 4.50</div>
+                    <div class="detail-value " id="totalOutline">26.00 × 3.75 × 4.50</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">轴荷分布：</div>
-                    <div class="detail-value " id="axlesLoad">10+20+30</div>
+                    <div class="detail-value " id="axlesLoad">10+20+3*18</div>
                 </li>
             </ul>
         </div>
