--- a/022.html
+++ b/022.html
@@ -75,19 +75,18 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A6500002024102082574</div></li>
+                    <div class="detail-value " id="reqNo">A6200002024110782574</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">新疆维吾尔自治区，甘肃省，内蒙古自治区，陕西省</div></li>
+				<div class="detail-value " id="passDists">甘肃省，新疆维吾尔自治区</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年10月22日10时32分至 2024年10月31日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年11月08日18时32分至 2024年11月30日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">新疆维吾尔自治区</span>:甘泉堡收费站-G7京新高速-白山泉-新甘界；<br><hr>
-<span id="pro">甘肃省</span>:甘新界-G7京新高速-甘蒙界；<br><hr>
-<span id="pro">内蒙古自治区</span>:蒙甘界-G7京新高速-G6京藏高速-G65包茂高速-蒙陕界；<br><hr>
-<span id="pro">陕西省</span>:陕蒙界-G65包茂高速-G3021临兴高速-G30连霍高速-G6521榆蓝高速-G40沪陕高速-S02西安外环-G70福银高速-高坝收费站-G345-高坝鸿新汽修<br><hr></div></li>
+<span id="pro">甘肃省</span>:永昌南收费站-G30连霍高速-甘新界；<br><hr>
+<span id="pro">新疆维吾尔自治区</span>:新甘界-星星峡--G30连霍高速-烟墩收费站-小草湖立交-G3012吐和高速-乌什塔拉东立交-G314-塔拉村；<br><hr>
+</div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -100,7 +99,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">挖机</div></li>
+                    <div class="detail-value " id="cargoInfo">翻斗车1台</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">43.30吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -136,10 +135,9 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-新疆维吾尔自治区：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
 甘肃省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-内蒙古自治区：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-陕西省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+新疆维吾尔自治区：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+</div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
