--- a/021.html
+++ b/021.html
@@ -75,17 +75,18 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">YQ14002024111402034</div></li>
+                    <div class="detail-value " id="reqNo">A1400002024111457694</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">山西省，河北省</div></li>
+				<div class="detail-value " id="passDists">山西省，陕西省，宁夏回族自治区</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年11月15日17时30分至 2024年11月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年11月15日18时59分至 2024年11月25日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">山西省</span>:昔阳收费站--S45天黎高速-G1812沧榆高速--晋冀界；<br><hr>
-<span id="pro">河北省</span>:冀晋界--G1812沧榆高速-阜平西收费站-G207--四里庄<br><hr></div></li>
+<span id="pro">山西省</span>:昔阳收费站--S45天黎高速-G5京昆高速---S2002太原二环高速--G5京昆高速--G20青银高速--晋陕界；<br><hr>
+<span id="pro">陕西省</span>:陕晋界--G20青银高速-G6521榆蓝高速-G1812沧榆高速-G65包茂高速-G20青银高速--陕宁界；<br><hr>
+<span id="pro">宁夏回族自治区</span>:宁陕界--G20青银高速-G2012定武高速-红寺堡收费站-G344--禾生农业<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -135,7 +136,8 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
 山西省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-河北省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+陕西省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+宁夏回族自治区：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
