--- a/022.html
+++ b/022.html
@@ -75,17 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A6200002024110782574</div></li>
+                    <div class="detail-value " id="reqNo">A6500002024111482574</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">甘肃省，新疆维吾尔自治区</div></li>
+				<div class="detail-value " id="passDists">新疆维吾尔自治区，青海省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年11月08日18时32分至 2024年11月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年11月15日18时32分至 2024年11月30日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">甘肃省</span>:永昌南收费站-G30连霍高速-甘新界；<br><hr>
-<span id="pro">新疆维吾尔自治区</span>:新甘界-星星峡--G30连霍高速-烟墩收费站-小草湖立交-G3012吐和高速-乌什塔拉东立交-G314-塔拉村；<br><hr>
+<span id="pro">新疆维吾尔自治区</span>:墨玉收费站-G3012吐和高速-G0612西和高速-新青界；<br><hr>
+<span id="pro">青海省</span>:青新界--花土沟收费站-G315-花土沟镇<br><hr>
 </div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
@@ -99,11 +99,11 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">翻斗车1台</div></li>
+                    <div class="detail-value " id="cargoInfo">吊车1台</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">43.30吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
-                    <div class="detail-value " id="cargoOutline">13.00 × 3.75 ×3.60</div></li>
+                    <div class="detail-value " id="cargoOutline">13.00 × 3.30 ×3.60</div></li>
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">车辆信息</li> <!-- 车辆信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车车号牌：</div>
@@ -123,7 +123,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货总重量：</div>
                     <div class="detail-value " id="totalWeight">60.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
-                    <div class="detail-value " id="totalOutline">26.00 × 3.75× 4.50</div></li>
+                    <div class="detail-value " id="totalOutline">24.00 × 3.30× 4.50</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">轴荷分布：</div>
                     <div class="detail-value " id="axlesLoad">10+20+30</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class=" detail-name-blod">车货总体轮廓图：</div>
@@ -135,8 +135,8 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-甘肃省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
 新疆维吾尔自治区：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+青海省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
 </div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
