--- a/022.html
+++ b/022.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">新疆维吾尔自治区</span>:墨玉收费站-G3012吐和高速-G0612西和高速-新青界；<br><hr>
+<span id="pro">新疆维吾尔自治区</span>:洛浦东收费站-G3012吐和高速-G0612西和高速-新青界；<br><hr>
 <span id="pro">青海省</span>:青新界--花土沟收费站-G315-花土沟镇<br><hr>
 </div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
