--- a/a001.html
+++ b/a001.html
@@ -53,7 +53,7 @@
                 <li data-role="list-divider" class="category-title">基本信息</li> <!-- 基本信息 -->
                 <li>
                     <div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">B4200002024022300069</div>
+                    <div class="detail-value " id="reqNo">B4200002024111400069</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">有效范围：</div>
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行日期：</div>
-                    <div class="detail-value " id="passDate">2024-02-23至2024-02-29</div>
+                    <div class="detail-value " id="passDate">2024-11-15至2024-11-25</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行次数：</div>
@@ -70,7 +70,7 @@
                 <li>
                     <div class="detail-name detail-name-blod">通行路线：</div>
                     <div class="detail-value " id="roads">
-                        <br>浠水县绿色矿山混凝土搅拌站 -S202-兰溪收费站-G45大广高速-G50沪渝高速-庙岭收费站-S257-毛熊村 。 (审 批 路 线 不 含 城 市 道 路 )</div>
+                        <br>羽林汽车维修--G351-枫林收费站-G56杭瑞高速-阳新南收费站-G351-中国石化木港加油站。 (审 批 路 线 不 含 城 市 道 路 )</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">承运单位：</div>
@@ -85,15 +85,15 @@
                 <li data-role="list-divider" class="category-title">货物信息</li> <!-- 货物信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">翻斗车</div>
+                    <div class="detail-value " id="cargoInfo">三一375挖机一台</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物重量：</div>
-                    <div class="detail-value " id="cargoWeight">35.00吨</div>
+                    <div class="detail-value " id="cargoWeight">44.00吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
-                    <div class="detail-value " id="cargoOutline">11.00 × 3.70 × 3.60</div>
+                    <div class="detail-value " id="cargoOutline">12.00 × 3.75 × 3.60</div>
                 </li>
 
                 <li data-role="list-divider" class="category-title">车辆信息</li> <!-- 车辆信息 -->
@@ -125,15 +125,15 @@
                 <li data-role="list-divider" class="category-title">车货总体信息</li> <!-- 车货总体信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">车货总重量：</div>
-                    <div class="detail-value " id="totalWeight">52.00吨</div>
+                    <div class="detail-value " id="totalWeight">61.00吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
-                    <div class="detail-value " id="totalOutline">20.00 × 3.70 × 4.50</div>
+                    <div class="detail-value " id="totalOutline">26.00 × 3.75 × 4.50</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">轴荷分布：</div>
-                    <div class="detail-value " id="axlesLoad">10+20+30</div>
+                    <div class="detail-value " id="axlesLoad">10+20+3*18</div>
                 </li>
             </ul>
         </div>
