--- a/016.html
+++ b/016.html
@@ -75,16 +75,16 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4200002024111435472</div></li>
+                    <div class="detail-value " id="reqNo">A4200002024111437589</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
 				<div class="detail-value " id="passDists">湖北省，江西省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年11月15日18时50分至 2024年11月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年11月15日17时24分至 2024年11月30日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">湖北省</span>:羽林汽车维修--G351-枫林收费站-G56杭瑞高速--鄂赣界；<br><hr>
+<span id="pro">湖北省</span>:上巢柴油加油站--G220-阳新东收费站-S29麻阳高速--G56杭瑞高速--鄂赣界；<br><hr>
 <span id="pro">江西省</span>:赣鄂界--G56杭瑞高速--瑞昌收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台佳通货物运输有限公司</div></li>
@@ -100,7 +100,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
                     <div class="detail-value " id="cargoInfo">三一375挖机一台</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
-                    <div class="detail-value " id="cargoWeight">49.695吨</div></li>
+                    <div class="detail-value " id="cargoWeight">48.695吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
                     <div class="detail-value " id="cargoOutline">16.00 × 3.75×3.60</div></li>
                     
@@ -120,7 +120,7 @@
                 
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">车货总体信息</li> <!-- 车货总体信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货总重量：</div>
-                    <div class="detail-value " id="totalWeight">67.00吨</div></li>
+                    <div class="detail-value " id="totalWeight">66.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
                     <div class="detail-value " id="totalOutline">27.00 × 3.75× 4.50</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">轴荷分布：</div>
