--- a/016.html
+++ b/016.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">湖北省</span>:上巢柴油加油站--G220-阳新东收费站-S29麻阳高速--G56杭瑞高速--鄂赣界；<br><hr>
+<span id="pro">湖北省</span>:上巢柴油加油站--G220--阳新东收费站--S29麻阳高速--G56杭瑞高速--鄂赣界；<br><hr>
 <span id="pro">江西省</span>:赣鄂界--G56杭瑞高速--瑞昌收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台佳通货物运输有限公司</div></li>
