--- a/022.html
+++ b/022.html
@@ -77,15 +77,16 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
                     <div class="detail-value " id="reqNo">A6500002024111482574</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">新疆维吾尔自治区，青海省</div></li>
+				<div class="detail-value " id="passDists">新疆维吾尔自治区，青海省，甘肃省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
                     <div class="detail-value " id="passDate">2024年11月15日18时32分至 2024年11月30日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">新疆维吾尔自治区</span>:洛浦东收费站-G3012吐和高速-G0612西和高速-新青界；<br><hr>
-<span id="pro">青海省</span>:青新界--花土沟收费站-G315-花土沟镇<br><hr>
+<span id="pro">新疆维吾尔自治区</span>:新疆兴翔果业有限公司-G315-墨玉收费站-G3012吐和高速-尼雅收费站--G0612西和高速--新青界；<br><hr>
+<span id="pro">青海省</span>:青新界--G0612西和高速-老茫崖收费站-G315-S20德小高速--S2013茶德高速--察汗诺互通立交-G0612---甘子河收费站-G213-G315--湟源收费站--G6京藏高速--G0612西和高速--G0611张汶高速--G310循隆高速-S22临共高速--青甘界；<br><hr>
+<span id="pro">甘肃省</span>:甘青界--S34双达高速--G1816乌玛高速-G75兰海高速-玉井收费站-G310-G212-会川收费站-G75兰海高速(G75兰海高速下行线井坪至韩家河段禁止通行)- -S14陇渭高速-G30连霍高速-G8513平绵高速--G85银昆高速--武都收费站-G212-陇南瑞彤商贸有限公司<br><hr>
 </div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
@@ -137,6 +138,7 @@
 				<div class="detail-value " id="passOpinion"><br>
 新疆维吾尔自治区：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
 青海省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+甘肃省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
 </div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
