--- a/007.html
+++ b/007.html
@@ -75,18 +75,18 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A1400002024111404851</div></li>
+                    <div class="detail-value " id="reqNo">A4200002024112604851</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">山西省，陕西省，宁夏回族自治区</div></li>
+				<div class="detail-value " id="passDists">湖北省，河南省，河北省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年11月15日18时08分至 2024年11月26日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年11月28日18时08分至 2024年12月08日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">山西省</span>:昔阳收费站--S45天黎高速-G5京昆高速---S2002太原二环高速--G5京昆高速--G20青银高速--晋陕界；<br><hr>
-<span id="pro">陕西省</span>:陕晋界--G20青银高速-G6521榆蓝高速-G1812沧榆高速-G65包茂高速-G20青银高速--陕宁界；<br><hr>
-<span id="pro">宁夏回族自治区</span>:宁陕界--G20青银高速-G2012定武高速-红寺堡收费站-G344--禾生农业<br><hr>
+<span id="pro">湖北省</span>:当阳北收费站-G59呼北高速-G42沪蓉高速-G55二广高速-鄂豫界；<br><hr>
+<span id="pro">河南省</span>:豫鄂界-G55二广高速-S83兰南高速-G0421许广高速-G4京港澳高速-豫冀界；<br><hr>
+<span id="pro">河北省</span>:冀豫界-G4京港澳高速-S76曲港高速-S31涞曲高速-G18荣乌高速-S10张石高速-G95首都环线高速-G1013海张高速-郝家营收费站-X453-G335-席家村<br><hr>
 </div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
@@ -100,7 +100,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">翻斗车1台</div></li>
+                    <div class="detail-value " id="cargoInfo">电缆盘</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">43.09吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -136,9 +136,9 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-山西省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-陕西省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-宁夏回族自治区：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+湖北省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+河南省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+河北省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
