--- a/002.html
+++ b/002.html
@@ -84,8 +84,8 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">福建省</span>: 羽宸汽车维修服务站修理厂--G356--莆田西收费站--S55秀永支线--G15深海高速--闽粤界；<br><hr>
-<span id="pro">广东省</span>: 粤闽界--G15高速--惠来收费站--G238--华静工程管理有限公司<br><hr>
+<span id="pro">福建省</span>: 羽宸汽车维修服务站修理厂--G356--莆田西收费站--S55秀永支线--G15沈海高速--闽粤界；<br><hr>
+<span id="pro">广东省</span>: 粤闽界--G15沈海高速--惠来收费站--G238--华静工程管理有限公司<br><hr>
 </div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
