--- a/006.html
+++ b/006.html
@@ -75,17 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4400002024121709151</div></li>
+                    <div class="detail-value " id="reqNo">A4400002024121809151</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广东省,广西壮族自治区</div></li>
+				<div class="detail-value " id="passDists">广东省,江西省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年12月19日18时45分至 2024年12月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年12月20日18时45分至 2024年12月31日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广东省</span>: 佛山市金穗盈不锈钢材料有限公司--S272--明城收费站--S5广台高速--谭塱立交--G94珠三角环线高速--富佛立交--G80广昆高速--粤桂界；<br><hr>
-<span id="pro">广西壮族自治区</span>: 桂粤界--G80广昆高速--G65包茂高速--梧州西收费站--G321--梧州市金如意拖拉机厂<br><hr></div></li>
+<span id="pro">广东省</span>: 广居照明有限公司--S229--船塘东收费站--G78汕昆高速--三角立交--G4511龙河高速--粤赣界；<br><hr>
+<span id="pro">江西省</span>: 赣粤界--G4511龙河高速--定南收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -98,7 +98,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">履带吊</div></li>
+                    <div class="detail-value " id="cargoInfo">挖机</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">43.45吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -135,7 +135,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
 广东省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-广西壮族自治区：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+江西省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
