--- a/a004.html
+++ b/a004.html
@@ -57,11 +57,11 @@
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">有效范围：</div>
-                    <div class="detail-value " id="passDists">湖北省我的</div>
+                    <div class="detail-value " id="passDists">新疆维吾尔自治区内</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行日期：</div>
-                    <div class="detail-value " id="passDate">2023-08-05至2023-08-31</div>
+                    <div class="detail-value " id="passDate">2025-03-24至2025-04-23</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行次数：</div>
@@ -70,66 +70,66 @@
                 <li>
                     <div class="detail-name detail-name-blod">通行路线：</div>
                     <div class="detail-value " id="roads">
-                        <br>荆门-荆州,鸿发物流-培公大道-荆门收费站-G55二广高速-章庄铺收费站-集贸南路-章庄铺小学。(审批路线不含城市道路)</div>
+                        <br>大浪沙收费站-G7京新高速-老奇台收费站-奇台县巨浪加油站</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">承运单位：</div>
-                    <div class="detail-value " id="certName">武汉盛世恒通物流有限公司</div>
+                    <div class="detail-value " id="certName">邢台伟驰货物运输有限公司</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">经营许可证号：</div>
-                    <div class="detail-value " id="orgCertNo"> 42****0682</div>
+                    <div class="detail-value " id="orgCertNo"> 130501000708</div>
                 </li>
 
 
                 <li data-role="list-divider" class="category-title">货物信息</li> <!-- 货物信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">钢结构（钢板）</div>
+                    <div class="detail-value " id="cargoInfo">挖掘机一台</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物重量：</div>
-                    <div class="detail-value " id="cargoWeight">43.00吨</div>
+                    <div class="detail-value " id="cargoWeight">42.995吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
-                    <div class="detail-value " id="cargoOutline">24.00 × 3.50 × 4.50</div>
+                    <div class="detail-value " id="cargoOutline">15.000× 3.750× 4.500</div>
                 </li>
 
                 <li data-role="list-divider" class="category-title">车辆信息</li> <!-- 车辆信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">牵引车车号牌：</div>
-                    <div class="detail-value" id="vehicleNo">冀E12345</div>
+                    <div class="detail-value" id="vehicleNo">冀ET0058</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">牵引车厂牌型号：</div>
-                    <div class="detail-value" id="model">陕汽牌</div>
+                    <div class="detail-value" id="model">解放牌</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">牵引车整备质量：</div>
-                    <div class="detail-value" id="vehWeight">8.80吨</div>
+                    <div class="detail-value" id="vehWeight">8.805吨</div>
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车车号牌：</div>
-                    <div class="detail-value" id="hanvehicleNo">冀E12345挂</div>
+                    <div class="detail-value" id="hanvehicleNo">冀E206R挂</div>
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车厂牌型号：</div>
-                    <div class="detail-value" id="hanmodel">鲁俊达牌</div>
+                    <div class="detail-value" id="hanmodel">利源达牌</div>
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车整备质量：</div>
-                    <div class="detail-value " id="hanvehWeight">8.20吨</div>
+                    <div class="detail-value " id="hanvehWeight">8.200吨</div>
                 </li>
 
                 <li data-role="list-divider" class="category-title">车货总体信息</li> <!-- 车货总体信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">车货总重量：</div>
-                    <div class="detail-value " id="totalWeight">60.00吨</div>
+                    <div class="detail-value " id="totalWeight">60.000吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
-                    <div class="detail-value " id="totalOutline">24.00 × 3.50 × 4.50</div>
+                    <div class="detail-value " id="totalOutline">25.000 × 3.750 × 4.500</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">轴荷分布：</div>
